# huawei_partition

./: README.md
main/: CMakeLists.txt  data.cc  data.h  main.cc  main.h  process.cc  process.h  run.sh  temp.cc
main/include/: driver.h  edge.h  graph.h  i_e_all.h  instance.h  mygraph.h  mymodule.h  pp  pp.ll  process.h  read_graph.h  vertex.h
main/paser/: CMakeLists.txt  VerilogDataBase.h  VerilogDriver.cc  VerilogDriver.h  VerilogDriver_1.cc  VerilogParser.cc  VerilogParser.h  VerilogParser.yy  VerilogScanner.cc  VerilogScanner.h  VerilogScanner.ll
main/src/: edge.cc  graph.cc  instance.cc  mygraph.cc  mymodule.cc  process.cc  read_graph.cc  temp.anccc  temp.c  vertex.cc  vertex_old.cc
main/test/: output.txt  output_2.txt
main/test/benchmarks/: for_test.v
main/test/benchmarks_all/: binary_full_adder.v  for_t2.v  small.v
main_0606/: data.cc  data.h  edge.cc  edge.h  graph.cc  main.cc  temp.sf
temp/Extract_fanout/: CMakeLists.txt  README.md  run.sh
temp/Extract_fanout/parser/bison/: VerilogDataBase.cc  VerilogDataBase.h  VerilogDriver.cc  VerilogParser.yy  VerilogScanner.ll
temp/Extract_fanout/test/: CMakeLists.txt  test_bison.cpp
temp/Extract_fanout/test/benchmarks/: for_test.v  half_adder.v
temp/Extract_fanout/test/benchmarks_all/: binary_full_adder.v  module_C906.v
temp/Extract_fanout/test/output/: output.txt
